--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "postinstall": "npm install --prefix backend"
+  },
+  "dependencies": {
+    "@react-three/drei": "^10.6.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
