--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "postinstall": "npm install --prefix backend"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "@react-three/drei": "^10.6.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
