--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "gsap": "^3.13.0",
+    "nipplejs": "^0.10.2",
     "randomcolor": "^0.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
