--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nipplejs": "^0.10.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.0",
     "react-swipeable": "^7.0.2"
   }
 }
