--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@react-three/drei": "^10.6.1",
+    "gsap": "^3.13.0",
     "nipplejs": "^0.10.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
