--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^8.4.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "bcrypt": "^5.1.0",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "express-list-endpoints": "^6.0.0",
+    "dotenv": "^16.0.3"
   }
 }
