--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "axios": "^1.11.0",
     "gsap": "^3.13.0",
     "nipplejs": "^0.10.2",
     "randomcolor": "^0.6.2",
