--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.4.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.0.1"
   }
 }
