--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.4.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.0.1"
   }
 }
