--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
-    "axios": "^1.11.0",
     "@react-three/postprocessing": "^3.0.4",
+    "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "nipplejs": "^0.10.2",
     "randomcolor": "^0.6.2",
