--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
-  VITE_API_BASE_URL = "https://api.render.com/deploy/srv-d2o87kf5r7bs738ivi30?key=HUPb1chL8-s"
+  VITE_API_BASE_URL = "https://project-final-hwyo.onrender.com/"
 
 [[redirects]]
   from = "/*"
